# deep-caption

./: CHANGELOG.md  README.md  pyproject.toml
app/: __init__.py  config.py  events.py  main.py  models.py
app/asr/: postprocess.py  prompt_manager.py  whisper_cpp.py
app/audio/: base.py  capture_protocol.py  resample.py  ring_buffer.py  segmenter.py  vad.py
app/capture/linux/: pipewire_capture.py  pulseaudio_capture.py  source_discovery.py
app/capture/mac/: bridge_client.py  messages.py
app/cli/: mock_voice.py  voice_service.py
app/core/: metrics.py  pipeline.py  scheduler.py  supervisor.py  voice_runtime.py
app/overlay/: hotkeys.py  qt_overlay.py  theme.py  wayland_overlay.py  x11_overlay.py
app/platform/: linux_env.py  mac_permissions.py
app/subtitle/: composer.py  history.py  stabilizer.py
app/translation/: argos_backend.py  base.py  language_detect.py  nllb_backend.py  opus_backend.py  router.py
app/ui/: logs_window.py  settings_window.py  source_picker.py  text_mode_window.py  tray.py  voice_window.py
config/: default.yaml
helpers/mac_audio_capture/: Package.swift
helpers/mac_audio_capture/.build/: build.db  release.yaml
helpers/mac_audio_capture/.build/arm64-apple-macosx/release/: mac_audio_capture  plugin-tools-description.json
helpers/mac_audio_capture/.build/arm64-apple-macosx/release/ModuleCache/: ScreenCaptureKit-3SGOCTMHZBLXQ.swiftmodule
helpers/mac_audio_capture/Sources/mac_audio_capture/: main.swift
tests/: test_linux_env.py  test_mock_voice.py  test_segmenter.py  test_source_discovery.py  test_stabilizer.py
(+188 files in other folders)
