[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "deep-caption"
version = "0.1.0"
description = "Offline desktop subtitle translation overlay"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "PySide6>=6.7.0",
  "PyYAML>=6.0.1",
  "numpy>=1.26.0",
  "onnxruntime>=1.18.0",
  "argostranslate>=1.9.6",
  "lingua-language-detector>=2.0.2",
]

[project.scripts]
deep-caption = "app.main:main"
deep-caption-mock-voice = "app.cli.mock_voice:main"
deep-caption-voice = "app.cli.voice_service:main"

[tool.setuptools.packages.find]
include = ["app*"]
